# audit-friendly-bingo-generator

./: .gitignore  LICENSE  README.md  cards.json  config.base.yaml  config.yaml  pyproject.toml  report.json  summary.csv
.github/workflows/: ci.yml
src/bingo_gen/: cli.py  config.py  constraints.py  feasibility.py  layout.py  logging_setup.py  rng.py  serialize.py  uniqueness.py  verify.py  version.py
src/bingo_gen/builder/: bibd.py  heuristic.py  staged.py
src/bingo_gen/core/: __init__.py  builder.py  constraints.py  optimizer.py
tests/: test_bibd_minimal_tdd.py  test_config_resolution.py  test_feasibility_tdd.py  test_heuristic_mvp_tdd.py  test_layout_tdd.py  test_rng_tdd.py  test_staged_builder_tdd.py  test_uniqueness_integration_tdd.py  test_uniqueness_tdd.py  test_verify_tdd.py
